<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_bottom_sheet"
        style="@style/TextViewEditText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_bottom_sheet"
        android:layout_marginVertical="15dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimaryDark"
        android:padding="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            style="@style/buttonCustom"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/btn_no"
            android:layout_margin="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            style="@style/buttonCustom"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/btn_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/btn_yes"
            android:layout_margin="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>