<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_item_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_item_info"
                style="@style/TextViewEditText"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description_item_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description_item_info"
                style="@style/TextViewEditText"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/read_more_info"
                app:layout_constraintTop_toBottomOf="@+id/title_item_info"
                android:layout_marginEnd="30dp"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/read_more_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                style="@style/TextViewEditText"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>