<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ControlFragment">

    <View
        android:id="@+id/view_control"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_control"
        style="@style/ToolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_control"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto_th"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tb_control"
        android:layout_marginEnd="20dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iv_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_control"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_control"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_control">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_title_question_control"
                    style="@style/TextViewEditText"
                    android:text="@string/tv_question_control"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_temporary"
                    style="@style/buttonCustom"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_question_control"
                    android:text="@string/btn_temporary"
                    android:textSize="12sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_permanent"
                    style="@style/buttonCustom"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_temporary"
                    android:text="@string/btn_permanent"
                    android:textSize="12sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_provider_services"
                    style="@style/buttonCustom"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_permanent"
                    android:text="@string/btn_provider_services"
                    android:textSize="12sp"/>

                <View
                    android:id="@+id/view_control_button"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_provider_services"
                    android:background="@color/colorView"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_btn_authorizations"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_control_button"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="25dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/colorPrimary">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_background">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_request_send"
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>