<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_backgroung_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/iv_backgroung_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_logo_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/iv_home_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_backgroung_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/iv_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_question_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_cn"
                    android:text="@string/tv_question_home"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_home" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_authorize"
                    style="@style/buttonCustom"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/ic_arrows"
                    android:padding="15dp"
                    android:text="@string/btn_authorize"
                    android:textSize="12sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_recreation_area"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question_home" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_recreation_area"
                    style="@style/buttonCustom"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:drawableTop="@drawable/ic_recreation"
                    android:padding="10dp"
                    android:text="@string/btn_recreation_area"
                    android:textSize="12sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_question_home"
                    app:layout_constraintStart_toEndOf="@+id/btn_authorize"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register_automobile"
                    style="@style/buttonCustom"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/ic_car"
                    android:padding="15dp"
                    android:text="@string/btn_register_automobile"
                    android:textSize="12sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_contact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_authorize" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_contact"
                    style="@style/buttonCustom"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:drawableTop="@drawable/ic_megaphone"
                    android:padding="10dp"
                    android:text="@string/btn_contact"
                    android:textSize="12sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_register_automobile"
                    app:layout_constraintTop_toBottomOf="@+id/btn_recreation_area" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>